v0.2.1 Some additional error-checking in the API and associated tests.
